Fix table view on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,24 +47,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-table {
-  @apply min-w-full divide-y divide-gray-700 text-sm text-gray-200 mb-4;
-}
-
 thead {
-  @apply min-w-full bg-gray-800 text-xs uppercase font-medium text-gray-400;
+  @apply bg-gray-800 text-xs uppercase font-medium text-gray-400;
 }
 
 tbody {
-  @apply min-w-full divide-y divide-gray-700 bg-gray-900;
+  @apply divide-y divide-gray-700 bg-gray-900;
 }
 
 th {
-  @apply min-w-full px-6 py-3 text-left;
+  @apply py-1 pl-3 pr-6 md:py-3 text-left;
 }
 
 td {
-  @apply min-w-full px-6 py-4 whitespace-nowrap;
+  @apply py-1 pl-3 pr-6 md:py-4 whitespace-nowrap;
 }
 
 .cv-container {
